--- a/BooKtebi/src/app/login/login.component.html
+++ b/BooKtebi/src/app/login/login.component.html
@@ -1,43 +1,49 @@
 
 <router-outlet></router-outlet>
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 <img class="sky_bg" src = "./assets/img/blue_sky_bg.svg" alt="bg svg"/>
-
 
 <img class="suitman" src="./assets/img/sittingmanbooks.svg" alt="man" />
 
 <div class="card">
 
-  <h4 class="card-header">Login</h4>
 
   <div class="card-body">
     <form  >
 
       <div class="form group">
-        <label for="username">Username</label>
-        <input type="text" formCOntrolName="username" class="form-control"/>
+
+        <input type="email" formCOntrolName="email" class="form-control inputchange emailfield fontAwesome" placeholder="&#xF002; E-mail address" >
         <div  class="invalid-feedback">
-          <div >Username is required</div>
         </div>
       </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" />
-                <div class="invalid-feedback">
-                    <div >Password is required</div>
-                </div>
+                <input type="password" formControlName="password" class="form-control inputchange passwordfield fontAwesome" placeholder="&#xF023; Password" >
             </div>
 
+        <div class="form-group">
+        	<label for="rememberme" id="remembertext">Stay connected?</label>
+        	<input type="checkbox" id="rememberme">
+
+        </div>    
 
         <div class="form-group">
-            <button  class="btn btn-primary">
-                <span  class="spinner-border spinner-border-sm mr-1"></span>
-                Login
+            <button  class="btn btn-primary loginbutton ">
+            	<div class="logintext">
+            		Login 
+            	</div>
             </button>
-            <a routerLink="../register" class="btn btn-link">Register</a>
+            <a  routerLink="../forgotpassword" class="btn btn-link forgotpassword">Forgot password</a>
         </div>
 
+        <hr class="line-3"> 
+
+        <p class="donthave">
+        	DON'T HAVE A ACCOUNT? <a routerLink="../signup" class="signuplink">SING UP </a>
+        </p>
+
     </form>
+
   </div>
 
 
