--- a/BooKtebi/src/app/login/login.component.html
+++ b/BooKtebi/src/app/login/login.component.html
@@ -1,50 +1,59 @@
-
 <router-outlet></router-outlet>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<img class="sky_bg" src = "./assets/img/blue_sky_bg.svg" alt="bg svg"/>
+<div class="container-fluid ">
+  <div class="row align-items-center h-100">
+    
+    <div class="  col-lg-6 col-sm-12 ">
 
-<img class="suitman" src="./assets/img/sittingmanbooks.svg" alt="man" />
+      <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
 
-<div class="card">
-
-
-  <div class="card-body">
-    <form  >
-
-      <div class="form group">
-
-        <input type="email" formCOntrolName="email" class="form-control inputchange emailfield fontAwesome" placeholder="&#xF002; E-mail address" >
-        <div  class="invalid-feedback">
-        </div>
-      </div>
-            <div class="form-group">
-                <input type="password" formControlName="password" class="form-control inputchange passwordfield fontAwesome" placeholder="&#xF023; Password" >
+    </div>
+    <div class="col-sm-12 col-lg-6 ">
+      <div class="card col-sm-12 mt-lg-5">
+        <div class="card-body container  logincard">
+          <form>
+            <div class="form group row col-12 ">
+              <input
+                type="email"                       
+                formCOntrolName="email"
+                class="form-control inputchange emailfield fontAwesome"
+                placeholder="&#xF002; E-mail address"
+              />
+            </div>
+            <div class="form-group bg-light row col-12 mt-lg-5">
+              <input
+                type="password"
+                formControlName="password"
+                class="form-control inputchange passwordfield fontAwesome"
+                placeholder="&#xF023; Password"
+              />
             </div>
 
-        <div class="form-group">
-        	<label for="rememberme" id="remembertext">Stay connected?</label>
-        	<input type="checkbox" id="rememberme">
+            <div class="form-group row col-12 mt-lg-5">
+              <label for="rememberme" id="remembertext">Stay connected?</label>
+              <input type="checkbox" id="rememberme" />
+            </div>
 
-        </div>    
+            <div class="form-group row col-12 mt-lg-5">
+              <button class="btn btn-primary loginbutton offset-3 col-6">
+                <div class="logintext">Login</div>
+              </button>
+              <a routerLink="../forgotpassword" class="btn btn-link forgotpassword row col-12 mt-lg-2 d-flex justify-content-center"
+                >Forgot password!</a
+              >
+            </div>
 
-        <div class="form-group">
-            <button  class="btn btn-primary loginbutton ">
-            	<div class="logintext">
-            		Login 
-            	</div>
-            </button>
-            <a  routerLink="../forgotpassword" class="btn btn-link forgotpassword">Forgot password</a>
+            <hr class="line-3 row col-12 mt-lg-5" />
+
+            <p class="donthave row col-12 d-flex justify-content-center">
+              DON'T HAVE A ACCOUNT?
+              <a routerLink="../signup" class="signuplink"> SIGN UP </a>
+            </p>
+          </form>
         </div>
-
-        <hr class="line-3"> 
-
-        <p class="donthave">
-        	DON'T HAVE A ACCOUNT? <a routerLink="../signup" class="signuplink">SING UP </a>
-        </p>
-
-    </form>
-
+      </div>
+    </div>
   </div>
 
 
 </div>
+
