--- a/BooKtebi/src/app/login/login.component.html
+++ b/BooKtebi/src/app/login/login.component.html
@@ -2,13 +2,9 @@
 <div class="container-fluid ">
   <div class="row align-items-center h-100">
     
-    <div class="  col-lg-6 col-sm-12 ">
 
-      <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
-
-    </div>
-    <div class="col-sm-12 col-lg-6 ">
-      <div class="card col-sm-12 mt-lg-5">
+    <div class="col-12 col-lg-6 order-lg-1 order-2 ">
+      <div class="card col-md-12 mt-lg-5">
         <div class="card-body container  logincard">
           <form>
             <div class="form group row col-12 ">
@@ -19,7 +15,7 @@
                 placeholder="&#xF002; E-mail address"
               />
             </div>
-            <div class="form-group bg-light row col-12 mt-lg-5">
+            <div class="form-group  row col-12 mt-lg-5">
               <input
                 type="password"
                 formControlName="password"
@@ -51,6 +47,12 @@
           </form>
         </div>
       </div>
+    </div>
+    <div class="wrapper col-lg-6 col-12 order-lg-2 order-1">
+
+      <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
+    <!--  <img class="img-fluid " id="fond" src="./assets/img/blue_left.png" alt="man" /> -->
+
     </div>
   </div>
 
