almost finished, having issue with the blue illustration won't stick to the right with full width

--- a/BooKtebi/src/app/login/login.component.html
+++ b/BooKtebi/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <router-outlet></router-outlet>
-<div class="container-fluid ">
-  <div class="row align-items-center h-100">
+<div class="container-fluid h-100">
+  <div class="row  h-100 d-flex justify-content-center ">
     
 
-    <div class="col-12 col-lg-6 order-lg-1 order-2 ">
+    <div class="cardcol col-12 col-lg-6 order-lg-1 order-2 h-100">
       <div class="card col-md-12 mt-lg-5">
-        <div class="card-body container  logincard">
+        <div class="card-body container ">
           <form>
             <div class="form group row col-12 ">
               <input
@@ -48,11 +48,11 @@
         </div>
       </div>
     </div>
-    <div class="wrapper col-lg-6 col-12 order-lg-2 order-1">
-
-      <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
-    <!--  <img class="img-fluid " id="fond" src="./assets/img/blue_left.png" alt="man" /> -->
-
+    <div class=" col-lg-6 col-12 order-lg-2 order-1  ">
+      <div class="wrapper">
+        <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
+        <img class=" h-100 w-100 d-none d-lg-block " id="fond" src="./assets/img/fond_right.svg" alt="fond" /> 
+      </div>
     </div>
   </div>
 
