--- a/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
+++ b/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
@@ -1,1 +1,21 @@
-<p>generalsettings works!</p>
+<div class="settings">
+  <div class="container">
+    <div class=" ">
+      <div class="header mt-5">
+        <app-header></app-header>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="left-bar col-md-4">
+        <app-left-bar></app-left-bar>
+      </div>
+
+      <div class="hero-setting col-md-8">
+        <app-delete-account></app-delete-account>
+      </div>
+    </div>
+
+
+
+</div>
