--- a/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
+++ b/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="hero-setting col-md-8">
-        <app-delete-account></app-delete-account>
+        <router-outlet></router-outlet>
       </div>
     </div>
 
