--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -1,8 +1,10 @@
-<div class="header">
-  <div class="logo">
+<div class="header row ">
+
+  <div class="logo offset-1 col-2 ">
     <a href="#"> BookShop </a>
   </div>
-  <div class="nav">
+
+  <div class="nav  col-7">
     <div class="nav-item">Home</div>
     <div class="nav-item">About</div>
 
