--- a/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
+++ b/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
@@ -1,6 +1,6 @@
 <div class="settings">
-  <div class="container">
-    <div class=" ">
+  <div class="container-fluid">
+    <div class="">
       <div class="header mt-5">
         <app-header></app-header>
       </div>
