--- a/BooKtebi/src/app/components/basket/basket.component.html
+++ b/BooKtebi/src/app/components/basket/basket.component.html
@@ -54,8 +54,8 @@
 
     <div class="py-2 mt-12 border-t border-gray-300 flex w-full justify-between">
         <div class="flex-1 flex items-center">
-            <img src="assets/master.png" alt="" class="w-24 mr-8">
-            <img src="assets/visa.png" alt="" class="w-24">
+            <img src="assets/img/master.png" alt="" class="w-24 mr-8">
+            <img src="assets/img/visa.png" alt="" class="w-24">
         </div>
         <div>
             <button class="text-gray-100 px-12 py-2 rounded check">Checkout</button>
