--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -1,6 +1,6 @@
 <div class="mt-4 border border-gray-400 rounded-2xl container mx-auto p-8 ok ">
     <div class="flex">
-        <img src="assets/book.png" alt="" class="w-64 mr-4">
+        <img src="assets/img/book.png" alt="" class="w-64 mr-4">
         <div class="flex-1">
             <h1 class="font-bold">Where the crawdels sing</h1>
             <hr>
