loginadmmin to do

--- a/BooKtebi/src/app/pages/login/login.component.html
+++ b/BooKtebi/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <div class="container-fluid h-100">
   <div class="row  h-100 d-flex justify-content-center ">
-    
+
 
     <div class="cardcol col-12 col-lg-6 order-lg-1 order-2 h-100">
       <div class="card col-md-12 mt-lg-5">
@@ -9,7 +9,7 @@
           <form>
             <div class="form group row col-12 ">
               <input
-                type="email"                       
+                type="email"
                 formCOntrolName="email"
                 class="form-control inputchange emailfield fontAwesome"
                 placeholder="&#xF002; E-mail address"
@@ -50,12 +50,10 @@
     </div>
     <div class=" col-lg-6 col-12 order-lg-2 order-1  ">
       <div class="wrapper">
-        <img class="img-fluid " id="man" src="./assets/img/ty.png" alt="man" />
-        <img class=" h-100 w-100 d-none d-lg-block " id="fond" src="./assets/img/fond_right.svg" alt="fond" /> 
+        <img class="img-fluid " id="man" src="./assets/img/signup-hero.png" alt="man" />
+        <img class=" h-100 w-100 d-none d-lg-block " id="fond" src="./assets/img/fond_right.svg" alt="fond" />
       </div>
     </div>
   </div>
-
-
 </div>
 
