added some routing

--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -5,16 +5,26 @@
   </div>
 
   <div class="nav  col-7">
-    <div class="nav-item">Home</div>
+    <div class="nav-item">
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+    </div>
     <div class="nav-item">About</div>
 
-    <div class="nav-item">Shop</div>
+    <div class="nav-item">
+      <a routerLink="/products" routerLinkActive="active">Shop</a>
+    </div>
 
-    <div class="nav-item">Contact</div>
+    <div class="nav-item"> Contact</div>
 
     <div class="nav-item"><i class="fa fa-shopping-cart"></i></div>
 
     <div class="nav-item"><i class="fa fa-search"></i></div>
-    <div class="nav-item"><i class="fa fa-user"></i></div>
+    <div class="nav-item">
+      <a routerLink="/generalsettings" routerLinkActive="active">
+        <i class="fa fa-user"></i>
+      </a>
+
+
+    </div>
   </div>
 </div>
