--- a/BooKtebi/src/app/components/hero/hero.component.html
+++ b/BooKtebi/src/app/components/hero/hero.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="col-md-7">
-      <img src="../../../assets/img/hero.png" alt="hero" />
+      <img src="./assets/img/hero.png" alt="hero" />
     </div>
   </div>
 </div>
