added cart and item pages

--- a/BooKtebi/src/app/components/basket/basket.component.html
+++ b/BooKtebi/src/app/components/basket/basket.component.html
@@ -7,8 +7,8 @@
             <h1 class="font-bold">Where the crawdels sing</h1>
             <hr>
             <div class="flex items-center justify-between w-full pt-12">
-                <div class="detail"> 
-                    
+                <div class="detail">
+
                     <p class="mt-2 ">
                         paperback English Delia ownes <br>
                     </p>
@@ -18,24 +18,26 @@
                     </p>
                 </div>
                 <div>
-                    
+
                     <div class="w-full flex items-center mt-2">
                         <h1 class="text-3xl mr-4 font-extrabold price">$ 19.9</h1>
                         <div class="text-center font-bold num">
-                            <ion-icon name="caret-up"></ion-icon>
+                            <button ion-button color="caret-up"></button>
+
                             <span class="block">
                                 1
                             </span>
-                            <ion-icon name="caret-down"></ion-icon>
+                            <button ion-button color="caret-down"></button>
+
                         </div>
                     </div>
 
                 </div>
             </div>
-            
+
         </div>
     </div>
-    
+
 </div>
 
 <div class="mt-4 border border-gray-400 rounded-2xl container mx-auto p-8">
@@ -61,7 +63,7 @@
             <button class="text-gray-100 px-12 py-2 rounded check">Checkout</button>
         </div>
     </div>
-    
+
 </div>
 <!-- <footer class="flex text-center container mx-auto mt-8">
   <div class="flex-1">
