--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -5,13 +5,18 @@
             <h1 class="font-bold">Where the crawdels sing</h1>
             <hr>
             <div class="flex items-center justify-between w-full">
-                <div> 
+                <div>
                     <span>
-                        <ion-icon name="star" class="text-xl text-yellow-400 mr-1"></ion-icon>
-                        <ion-icon name="star" class="text-xl text-yellow-400 mr-1"></ion-icon>
-                        <ion-icon name="star" class="text-xl text-yellow-400 mr-1"></ion-icon>
-                        <ion-icon name="star" class="text-xl text-yellow-400 mr-1"></ion-icon>
-                        <ion-icon name="star" class="text-xl text-yellow-400 mr-1"></ion-icon>
+
+
+                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
+                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
+                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
+                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
+                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
+
+
+
                     </span>
                     <p class="mt-2">
                         paperback | English <br>
@@ -23,11 +28,13 @@
                     <div class="w-full flex items-center mt-2">
                         <h1 class="text-3xl mr-4 font-extrabold">$ 19.9</h1>
                         <div class="text-center font-bold">
-                            <ion-icon name="caret-up"></ion-icon>
+                            <button ion-button color="caret-up"></button>
+
                             <span class="block">
                                 1
                             </span>
-                            <ion-icon name="caret-down"></ion-icon>
+                            <button ion-button color="caret-down"></button>
+
                         </div>
                     </div>
 
@@ -59,11 +66,11 @@
         </p>
         <h1 class="font-bold w-96 py-2 border-t border-gray-400 mt-8">Product Details</h1>
         <p class="tracking-wide leading-loose  text-gray-600">
-            
+
               Format: Paperback | 384 pages <br>
               Dimensions: 126 x 194 x 28mm | 303g <br>
               Publication: date 20 Dec 2019 <br>
-              Publisher: Little, Brown Book Group <br> 
+              Publisher: Little, Brown Book Group <br>
               Publication City/Country: London, United Kingdom <br>
               Language: English <br>
               ISBN10: 1472154665 <br>
