--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -14,7 +14,11 @@
       <a routerLink="/products" routerLinkActive="active">Shop</a>
     </div>
 
-    <div class="nav-item"> Contact</div>
+    <div class="nav-item">
+
+      <a routerLink="/contact" routerLinkActive="active">Contact</a>
+
+    </div>
 
     <div class="nav-item"><i class="fa fa-shopping-cart"></i></div>
 
