--- a/BooKtebi/src/app/pages/generalsettings/generalsettings.component.css
+++ b/BooKtebi/src/app/pages/generalsettings/generalsettings.component.css
@@ -13,3 +13,14 @@ border: 3px solid #9C8183;
 border-right: 3px solid #9C8183;
 
 }
+body{
+  margin-top: 0px;
+}
+.fill {
+  min-height: 100%;
+  height: 100%;
+}
+.settings {
+  padding: 20px 0 0 0;
+
+}
