--- a/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
+++ b/BooKtebi/src/app/pages/generalsettings/generalsettings.component.html
@@ -1,21 +1,22 @@
-<div class="settings">
-  <div class="container-fluid">
-    <div class="">
-      <div class="header mt-5">
-        <app-header></app-header>
-      </div>
-    </div>
-
-    <div class="row mt-5">
-      <div class="left-bar col-md-4">
-        <app-left-bar></app-left-bar>
+  <div class="settings bg-light fill">
+    <div class="container-fluid ">
+      <div class="">
+        <div class="header">
+          <app-header></app-header>
+        </div>
       </div>
 
-      <div class="hero-setting col-md-8">
-        <router-outlet></router-outlet>
+      <div class="row mt-5">
+        <div class="left-bar col-md-4">
+          <app-left-bar></app-left-bar>
+        </div>
+
+        <div class="hero-setting col-md-8">
+          <router-outlet></router-outlet>
+        </div>
       </div>
-    </div>
+
+  </div>
 
 
 
-</div>
