added link to Newproducts component from Shop in nav and Get started button

--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -11,7 +11,9 @@
     <div class="nav-item">About</div>
 
     <div class="nav-item">
-      <a routerLink="/products" routerLinkActive="active">Shop</a>
+    <!-- <a routerLink="/products" routerLinkActive="active">Shop</a> -->
+      <a pageScroll  href="#newProducts">Shop</a>
+
     </div>
 
     <div class="nav-item">
