--- a/BooKtebi/src/app/pages/home/home.component.html
+++ b/BooKtebi/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="hero">
       <app-hero></app-hero>
     </div>
-    <div class="newProducts">
+    <div class="newProducts" id="newProducts">
       <app-new-products></app-new-products>
     </div>
     <div class="banner"></div>
