--- a/BooKtebi/src/app/components/hero/hero.component.html
+++ b/BooKtebi/src/app/components/hero/hero.component.html
@@ -7,7 +7,8 @@
         Your <span> Life</span>
       </div>
       <div class="hero-button">
-        <a href="#">Get Started</a>
+        <a pageScroll  href="#newProducts">Get Started</a>
+
       </div>
     </div>
     <div class="col-md-7">
