--- a/BooKtebi/src/app/components/product/product.component.html
+++ b/BooKtebi/src/app/components/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="product">
   <div class="product-details">
     <div class="product-image">
-      <img src="../../../assets/img/book.png" alt="book" />
+      <img src="./assets/img/book.png" alt="book" />
     </div>
     <div class="product-name">Book Name</div>
     <div class="product-date">01/01/2021</div>
