--- a/BooKtebi/src/app/pages/contact/contact.component.html
+++ b/BooKtebi/src/app/pages/contact/contact.component.html
@@ -44,7 +44,7 @@
 
       </form>
       <div class="col-md-6  offset-1 d-flex justify-content-center ">
-        <img src="../../../assets/img/contact-page-banner .png">
+        <img src="./assets/img/contact-page-banner .png">
       </div>
       <!-- Default form contact -->
 
