--- a/BooKtebi/src/app/components/header/header.component.scss
+++ b/BooKtebi/src/app/components/header/header.component.scss
@@ -38,10 +38,14 @@
         font-size: 20px;
       }
     }
-    .a {
+    a {
 
       color: #413f3f;
 
     }
   }
+}
+
+.active{
+  color: #ff6eb7;
 }
