--- a/BooKtebi/src/app/pages/contact/contact.component.html
+++ b/BooKtebi/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
 <!-- Default form contact -->
  <!--<form class="text-center border border-light p-5" [formGroup]="contactForm" (ngSubmit)="onSubmit()"> -->
-<div class="contact bg-light fill">
+<div class="contact  fill">
   <div class="container-fluid ">
     <div class="header">
       <app-header></app-header>
