--- a/BooKtebi/src/app/pages/login/login.component.html
+++ b/BooKtebi/src/app/pages/login/login.component.html
@@ -49,7 +49,7 @@
             <a href="#" class="forgot">Forgot Password ?</a>
             <div class="signup-wrapper mt-5">
               <hr />
-              <p>DON’T HAVE AN ACCOUNT? <a href="#"> SIGN UP</a></p>
+              <p>DON’T HAVE AN ACCOUNT? <a href="signup"> SIGN UP</a></p>
             </div>
           </form>
         </div>
