--- a/BooKtebi/src/app/components/left-bar/left-bar.component.html
+++ b/BooKtebi/src/app/components/left-bar/left-bar.component.html
@@ -1,6 +1,6 @@
 <div class="profil">
   <img class="profil-img" src="/assets/img/avatar.png" />
-  <a [routerLink]="['../generalSettings']" class="profil-link mt-4"
+  <a [routerLink]="['../generalsettings']" class="profil-link mt-4"
     >General Settings</a
   >
   <a [routerLink]="['payment-method']" class="profil-link mt-4"
