--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -23,7 +23,10 @@
 
     <div class="nav-item"><i class="fa fa-search"></i></div>
     <div class="nav-item">
-      <a [routerLink]="['generalsettings']"><i class="fa fa-user"></i></a>
+     <a [routerLink]="['/generalsettings']"><i class="fa fa-user"></i></a>
+
+
+
     </div>
   </div>
 </div>
