--- a/BooKtebi/src/app/components/footer/footer.component.html
+++ b/BooKtebi/src/app/components/footer/footer.component.html
@@ -18,7 +18,7 @@
           <div class="title text-center">Terms Of Use</div>
           <div class="text-center">Lorem upsum</div>
           <div class="text-center">Lorem upsum</div>
-          <div class="text-center">Lorem upsum</div>
+          <div class="text-center">Lorem upum</div>
         </div>
       </div>
     </div>
