link to login page

--- a/BooKtebi/src/app/components/hero/hero.component.html
+++ b/BooKtebi/src/app/components/hero/hero.component.html
@@ -7,7 +7,7 @@
         Your <span> Life</span>
       </div>
       <div class="hero-button">
-        <a pageScroll  href="#newProducts">Get Started</a>
+        <a pageScroll routerLink="/login" routerLinkActive="active" >Don't have an account?</a>
 
       </div>
     </div>
