--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -1,114 +1,102 @@
-<div class="mt-4 border border-gray-400 rounded-2xl container mx-auto p-8 ok ">
-    <div class="flex">
-        <img src="assets/img/book.png" alt="" class="w-64 mr-4">
-        <div class="flex-1">
-            <h1 class="font-bold">Where the crawdels sing</h1>
-            <hr>
-            <div class="flex items-center justify-between w-full">
-                <div>
-                    <span>
-
-
-                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
-                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
-                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
-                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
-                        <button class= "text-xl text-yellow-400 mr-1" ion-button color="star"></button>
-
-
-
-                    </span>
-                    <p class="mt-2">
-                        paperback | English <br>
-                        By author Delia ownes
-                    </p>
-                </div>
-                <div>
-                    <p class="text-sm text-gray-500">Selected Format: <span class="font-bold">Hardcover</span></p>
-                    <div class="w-full flex items-center mt-2">
-                        <h1 class="text-3xl mr-4 font-extrabold">$ 19.9</h1>
-                        <div class="text-center font-bold">
-                            <button ion-button color="caret-up"></button>
-
-                            <span class="block">
+<div class="pages">
+    <div class="firstbox">
+     <div class="all">   
+         <img class="bookcover" src="assets/img/bookcopy.png" alt="book" class="">
+         <h1 class="titlee">Where the crawdels sing</h1>   
+         <p class="format"> Selected Format: Hardcover</p>
+         <hr>  
+         <div class="detail">
+             <img src="assets/img/stars.png" alt="">
+              <p class="">
+                Paperback  English
+                <br>
+             </p>
+              <p class="">
+                By (author)  Delia Owens
+             </p>
+         </div>   
+     </div>
+     <div class="price">
+        <h1 class="pr">$ 19.9</h1>
+            <div class="ups">
+                <img src="assets/img/up.png" alt="up" class="up">
+                        <span class="k">
                                 1
-                            </span>
-                            <button ion-button color="caret-down"></button>
-
-                        </div>
-                    </div>
-
-                </div>
+                         </span>
+                <img src="assets/img/Down.png" alt="Down" class="down">
             </div>
-            <div class="w-full flex items-end justify-between mt-24">
-                <button class="bg-blue-100 rounded-lg px-6 py-2 text-center shadow-inner  font-bold but">
-                    hardcover <br>
-                    $ 19.99
-                </button>
-                <button class="bg-blue-100 rounded-lg px-6 py-2 text-center font-bold but">
-                    signed book <br>
-                    $ 29.99
-                </button>
-                <button class="bg-blue-100 rounded-lg px-8 py-2 text-center font-bold but">
-                    Donwload pdf <br>
-                    $ 25.99
-                </button>
-                <button class="bg-indigo-600 rounded-lg px-8 py-2 text-center text-gray-100 font-bold but1">
-                    Add to cart
-                </button>
-            </div>
+    </div>
+    <div >
+
+     <div class="buts">
+        <button class="but">
+            hardcover <br>
+            $ 19.99
+        </button>
+        <button class="but">
+            signed book <br>
+            $ 29.99
+        </button>
+        <button class="but">
+            Donwload pdf <br>
+            $ 25.99
+        </button>
+        <button class="but1">
+            Add to cart
+        </button>
+    </div>   <!-- buttons div-->
+    <hr class="hr">
+    <div class="des">
+      <h1> Description</h1>
+      <p>
+        For years, rumors of the 'Marsh Girl' have haunted Barkley Cove, a quiet town on the North Carolina coast. <br>
+         So in late 1969, when handsome Chase Andrews is found dead, the locals immediately suspect Kya Clark, the so-called Marsh Girl. But Kya is not what they say. Sensitive and intelligent, <br>
+          she has survived for years alone in the marsh that she calls home, finding friends in the gulls and lessons in the sand. Then the time comes when she yearns to be touched and loved. <br>
+           When two young men from town become intrigued by her wild beauty, Kya opens herself to a new life - until the unthinkable happens.
+      </p>
+    </div>
+    <hr class="hr2">
+    <div class="details">
+        <h1>Product Details</h1>
+        <div class="bloc1">
+            Format: Paperback | 384 pages <br>
+            Dimensions: 126 x 194 x 28mm | 303g <br>
+            Publication: date 20 Dec 2019 <br>
+            Publisher: Little, Brown Book Group 
+
+        </div>
+        <div class="bloc2">
+            Publication City/Country: London, United Kingdom <br>
+            Language: English <br>
+            ISBN10: 1472154665 <br>
+            ISBN13: 9781472154668 <br>
+            Bestsellers: rank 2 <br>
+
         </div>
     </div>
-    <div>
-        <h1 class="font-bold w-96 py-2 border-t border-gray-400 mt-8">Description</h1>
-        <p class="tracking-wide leading-loose text-gray-600">
-            For years, rumors of the 'Marsh Girl' have haunted Barkley Cove, a quiet town on the North Carolina coast. So in late 1969, when handsome Chase Andrews is found dead, the locals immediately suspect Kya Clark, the so-called Marsh Girl. But Kya is not what they say. Sensitive and intelligent, she has survived for years alone in the marsh that she calls home, finding friends in the gulls and lessons in the sand. Then the time comes when she yearns to be touched and loved. When two young men from town become intrigued by her wild beauty, Kya opens herself to a new life - until the unthinkable happens.
-        </p>
-        <h1 class="font-bold w-96 py-2 border-t border-gray-400 mt-8">Product Details</h1>
-        <p class="tracking-wide leading-loose  text-gray-600">
 
-              Format: Paperback | 384 pages <br>
-              Dimensions: 126 x 194 x 28mm | 303g <br>
-              Publication: date 20 Dec 2019 <br>
-              Publisher: Little, Brown Book Group <br>
-              Publication City/Country: London, United Kingdom <br>
-              Language: English <br>
-              ISBN10: 1472154665 <br>
-              ISBN13: 9781472154668 <br>
-              Bestsellers: rank 2 <br>
-        </p>
-    </div>
-</div>
-<footer class="flex text-center container mx-auto mt-8">
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li class="py-3 border-t border-gray-500 mt-2">Copyright 2021 BookShop</li>
+    </div> <!-- firstbox div-->
 
-    </ul>
-  </div>
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-
-    </ul>
-  </div>
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-
-    </ul>
-  </div>
-</footer>
+    <div class="footer">
+              <div class="">
+                <h3>Customer Services</h3>
+                <p>Lorem upsum </p> 
+                <p> Lorem upsum </p> 
+                <p> Lorem upsum </p>  </div>
+              <div class="about">
+                <h3>About us</h3>
+                <p> Lorem upsum </p> 
+                <p> Lorem upsum </p> 
+                <p> Lorem upsum </p> 
+              </div>
+              <div class="terms">
+               <h3>Terms Of Use</h3>
+                <p>Lorem upsum </p> 
+                <p> Lorem upsum </p> 
+                <p> Lorem upsum </p> 
+              </div>
+          <div class="copyright">
+            <hr />
+            <strong>Copyright © 2021 BookShop</strong>
+          </div>
+        </div>
