--- a/BooKtebi/src/app/components/basket/basket.component.html
+++ b/BooKtebi/src/app/components/basket/basket.component.html
@@ -1,100 +1,54 @@
+<h1 class="shop">Shopping basket details</h1>
+<div class="firstbox">
+ 
+ <div class="all">   
+     <img class="bookcover" src="./assets/img/bookcopy.png">
+     <h1 class="titlee">Where the crawdels sing</h1>     
+     <div class="detail">
+          <p class="">
+              paperback English Delia ownes <br>
+         </p>
+         <h1 class="">$ 19.9</h1>
+          <p class="">
+               Available-dispatched from the UK in three busniness day
+         </p>
+     </div>   
+ </div>
+ <div class="price">
+     <h1 class="pr">$ 19.9</h1>
+         <div class="ups">
+             <img src="./assets/img/up.png" class="up">
+                     <span class="k">
+                             1
+                      </span>
+             <img src="./assets/img/up.png"  class="down">
+         </div>
+ </div>
+ </div>
 
-<h1 class="font-bold container mx-auto px-8 mt-8">Shopping basket details</h1>
-<div class="mt-4 border border-gray-400 rounded-2xl container mx-auto p-8">
-    <div class="flex">
-        <img src="assets/book.png" alt="" class="w-64 mr-4">
-        <div class="flex-1">
-            <h1 class="font-bold">Where the crawdels sing</h1>
-            <hr>
-            <div class="flex items-center justify-between w-full pt-12">
-                <div class="detail">
+ <div class="secondbox">
+     <div class="paym">
+         <h2 class=""><span class="">Delivery Cost</span> <span > </span> </h2>
+         <h2 class="one">FREE</h2>
+         <h2 class=""><span class=" ">Total</span> <span class="one"></span> </h2>
+         <h2 class="one">$ 19.9</h2>
+         <div class="">
+             <span class="">Add Coupon: </span>
+             <input type="text" name="" id="" class="coup">
+             <button class="but">Apply</button>
+             <div>
+                 <button class=" check">Checkout</button>
+             </div>
+         </div>
+     </div>
+     <hr>
+         <div class="">
+             <div class="">
+                 <img src="./assets/img/master1.png"  class="master">
+                 <img src="./assets/img/visa1.png"  class="visa">
+             </div>
+         </div>
 
-                    <p class="mt-2 ">
-                        paperback English Delia ownes <br>
-                    </p>
-                    <h1 class=" mr-4 font-extrabold">$ 19.9</h1>
-                    <p class="mt-2 ">
-                        Available-dispatched from the UK in three busniness day
-                    </p>
-                </div>
-                <div>
 
-                    <div class="w-full flex items-center mt-2">
-                        <h1 class="text-3xl mr-4 font-extrabold price">$ 19.9</h1>
-                        <div class="text-center font-bold num">
-                            <button ion-button color="caret-up"></button>
 
-                            <span class="block">
-                                1
-                            </span>
-                            <button ion-button color="caret-down"></button>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-</div>
-
-<div class="mt-4 border border-gray-400 rounded-2xl container mx-auto p-8">
-    <div class="flex items-center justify-end font-bold text-right">
-        <div class="">
-
-            <h2 class="text-xl"><span class="mr-24">Delivery Cost</span> <span>FREE</span> </h2>
-            <h2 class="text-xl"><span class="mr-24 ">Total</span> <span>$ 19.9</span> </h2>
-            <div class="mt-4 flex items-center">
-                <span class="mr-8">Add Coupon: </span>
-                <input type="text" name="" id="" class="py-2 px-2 w-56 coup">
-                <button class="text-gray-100 px-6 py-2 but">Apply</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="py-2 mt-12 border-t border-gray-300 flex w-full justify-between">
-        <div class="flex-1 flex items-center">
-            <img src="assets/img/master.png" alt="" class="w-24 mr-8">
-            <img src="assets/img/visa.png" alt="" class="w-24">
-        </div>
-        <div>
-            <button class="text-gray-100 px-12 py-2 rounded check">Checkout</button>
-        </div>
-    </div>
-
-</div>
-<!-- <footer class="flex text-center container mx-auto mt-8">
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li class="py-3 border-t border-gray-500 mt-2">Copyright 2021 BookShop</li>
-
-    </ul>
-  </div>
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-
-    </ul>
-  </div>
-  <div class="flex-1">
-    <h1 class="font-bold text-lg">Customer Service</h1>
-    <ul class="text-center">
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-
-    </ul>
-  </div>
-</footer> -->
+     </div>
