--- a/BooKtebi/src/app/components/product/product.component.html
+++ b/BooKtebi/src/app/components/product/product.component.html
@@ -13,7 +13,8 @@
       <i class="fa fa-star-o"></i>
     </div>
     <div class="productButton">
-      <a href="#">View</a>
+      <a [routerLink]="['/item']">View</a>
+
     </div>
   </div>
 </div>
