--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -19,14 +19,19 @@
 
     </div>
 
-    <div class="nav-item"><i class="fa fa-shopping-cart"></i></div>
+    <div class="nav-item">
+      <a [routerLink]="['/basket']">
+        <i class="fa fa-shopping-cart"></i>
+      </a>
+
+    </div>
 
     <div class="nav-item"><i class="fa fa-search"></i></div>
+
     <div class="nav-item">
-     <a [routerLink]="['/generalsettings']"><i class="fa fa-user"></i></a>
-
-
-
+     <a [routerLink]="['/generalsettings']">
+      <i class="fa fa-user"></i>
+    </a>
     </div>
   </div>
 </div>
