some tweaks and added more form control in contact page works fine

--- a/BooKtebi/src/app/components/left-bar/left-bar.component.html
+++ b/BooKtebi/src/app/components/left-bar/left-bar.component.html
@@ -1,5 +1,5 @@
 <div class="profil">
-  <img class="profil-img" src="/assets/img/avatar.png" />
+  <img class="profil-img" src="./assets/img/avatar.png" />
   <a [routerLink]="['../generalsettings']" class="profil-link mt-4"
     >General Settings</a
   >
