--- a/BooKtebi/src/app/components/hero/hero.component.html
+++ b/BooKtebi/src/app/components/hero/hero.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-md-7">
-      <img src="./assets/img/hero.png" alt="hero" />
+      <img src="./assets/img/hero.png" class="img-fluid" alt="hero" />
     </div>
   </div>
 </div>
