--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -2,7 +2,7 @@
     <div class="firstbox">
      <div class="all">
          <img class="bookcover" src="assets/img/bookcopy.png" alt="book" class="">
-         <h1 class="titlee">Where the crawdels sing</h1>
+         <h1 class="titlee">{{book.title}}</h1>
          <p class="format"> Selected Format: Hardcover</p>
          <hr>
          <div class="detail">
@@ -17,7 +17,7 @@
          </div>
      </div>
      <div class="price">
-        <h1 class="pr">$ 19.9</h1>
+        <h1 class="pr">$ {{book.price}}</h1>
             <div class="ups">
                 <img src="assets/img/up.png" alt="up" class="up">
                         <span class="k">
@@ -49,10 +49,7 @@
     <div class="des">
       <h1> Description</h1>
       <p>
-        For years, rumors of the 'Marsh Girl' have haunted Barkley Cove, a quiet town on the North Carolina coast. <br>
-         So in late 1969, when handsome Chase Andrews is found dead, the locals immediately suspect Kya Clark, the so-called Marsh Girl. But Kya is not what they say. Sensitive and intelligent, <br>
-          she has survived for years alone in the marsh that she calls home, finding friends in the gulls and lessons in the sand. Then the time comes when she yearns to be touched and loved. <br>
-           When two young men from town become intrigued by her wild beauty, Kya opens herself to a new life - until the unthinkable happens.
+        {{book.description}}
       </p>
     </div>
     <hr class="hr2">
