--- a/BooKtebi/src/app/components/product/product.component.html
+++ b/BooKtebi/src/app/components/product/product.component.html
@@ -1,20 +1,19 @@
-<div class="product">
-  <div class="product-details">
-    <div class="product-image">
-      <img src="./assets/img/book.png" alt="book" />
-    </div>
-    <div class="product-name">Book Name</div>
-    <div class="product-date">01/01/2021</div>
-    <div class="product-rate">
-      <i class="fa fa-star"></i>
-      <i class="fa fa-star"></i>
-      <i class="fa fa-star"></i>
-      <i class="fa fa-star-half-empty"></i>
-      <i class="fa fa-star-o"></i>
-    </div>
-    <div class="productButton">
-      <a [routerLink]="['/item']">View</a>
+  <div class="product">
+    <div class="product-details">
+      <div class="product-image">
+        <img src="../../../assets/img/book.png" alt="book" />
+      </div>
+      <div class="product-name">{{book.name}}</div>
+      <div class="product-date">{{book.date}}</div>
+      <div class="product-rate">
 
+        <i *ngFor="let n of numSequence(book.stars); let i = index;" class="fa fa-star" ></i>
+
+
+      </div>
+      <div class="productButton">
+        <a [routerLink]="['/item', book.id]">View</a>
+
+      </div>
     </div>
   </div>
-</div>
